k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agrosolutions-gateway
  labels:
    app: agrosolutions-gateway
    environment: production
